# atelier

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.git.atelier-proto.bak/: COMMIT_EDITMSG  config  index
agents/: builder.md  librarian.md
config/: example.config.yaml
docs/: ADOPTING.md  ARCHITECTURE.md  OPS_NOTES.md  SCHEMA_V4.md  USING.md
docs/_archive/: IMPLEMENTATION_LOG.md
docs/rfc/: 0001-flat-facet-learnings.md  0002-baseline.json  0002-hybrid-retrieval.md  0003-p6-learning-relocation.md  0003-provenance-graph-consolidation.md  0004-session-end-capture.md  0005-atomic-knowledge-graph.md  0006-baseline.json  0006-memory-north-star.md  0007-single-intake-front-door.md  0008-absorb-lifecycle.md  (+2 more)
runtime/: cli.py
scripts/: migrate-from-ta-set  migrate_absorbed_project_slugs  setup
tests/: conftest.py  test_absorb_claude_memory.py  test_absorb_depth.py  test_absorb_memory_to_learnings.py  test_absorb_nudge.py  test_absorb_supersession.py  test_absorb_workshop.py  test_atomize_nudge.py  test_atomize_write.py  test_autosync_split.py  test_by_project_view.py  test_capability_ports.py  test_capture_service.py  test_census.py  test_census_damaged_learnings.py  test_claims.py  test_cluster.py  test_config_autosync.py  test_contract.py  test_daemon_guardrails.py  test_data_indexing.py  test_dream_nudge.py  test_dream_orchestration.py  test_dream_status_surface.py  test_embedding_gateway.py  test_entity_backfill.py  test_facet_resolver.py  test_freeze.py  test_frontmatter_indexing.py  test_goal.py  test_goal_cli.py  test_goal_run.py  test_index.py  test_indexes.py  test_lateral.py  test_lateral_forget.py  test_learning_capture.py  test_learning_facets.py  test_learning_lifecycle_roundtrip.py  test_learning_relocation.py  (+53 more)
(+140 files in other folders)
