[project]
name = "atelier"
version = "0.1.0"
description = "Methodology layer for a sovereign memory system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "The atelier authors" }]
dependencies = [
    "pyyaml>=6.0",
    # python-frontmatter intentionally omitted — runtime/index/parse.py rolls
    # its own to avoid the dep. Re-add later if we need its plugin model.
    # sqlite3 — stdlib
    # git — shell out via subprocess
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
serve = [
    "mcp>=1.0",
    "httpx>=0.28",
]
youtube = [
    "yt-dlp>=2025.1",
    "openai>=1.50",
]

[project.scripts]
atelier = "runtime.cli:main"
atelier-mcp-call = "runtime.service.mcp_call:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*"]
